--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -6,6 +6,8 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <link rel="stylesheet" href="../static/styles/styles.css">
     <link rel="stylesheet" href="../static/styles/{%block style%} {%endblock%}">
+    <link rel="icon" href="../static/imgs/favicon.ico" type="image/x-icon">
+    <!-- Sword icon created by Nikita Golubev - Flaticon -->
     <title>{%block title%} {%endblock%}</title>
 </head>
 <body>
